--- a/MovieDownloader/Resources/layout/Main.axml
+++ b/MovieDownloader/Resources/layout/Main.axml
@@ -3,11 +3,21 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-<Button  
-    android:id="@+id/MyButton"
-    android:layout_width="match_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/Hello"
-    />
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <Button
+        android:id="@+id/MyButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Hello" />
+    <ScrollView
+        android:id="@+id/scrollLogger"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent">
+        <EditText
+            android:id="@+id/txtLogger"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:text="" />
+    </ScrollView>
 </LinearLayout>
